// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and compares with different identity 1`] = `
<div
  className="Identity"
>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="firstNameGroup"
          >
            <label
              className="form-label"
              htmlFor="firstName"
            >
              First Name
            </label>
            <input
              className="form-control is-invalid"
              data-testid="firstName"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="John"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="lastNameGroup"
          >
            <label
              className="form-label"
              htmlFor="lastName"
            >
              Last Name
            </label>
            <input
              className="form-control is-invalid"
              data-testid="lastName"
              id="lastName"
              name="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Doe"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="emailGroup"
          >
            <label
              className="form-label"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className="form-control"
              data-testid="email"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="john.doe@logion.network"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="phoneNumberGroup"
          >
            <label
              className="form-label"
              htmlFor="phoneNumber"
            >
              Phone Number
            </label>
            <input
              className="form-control"
              data-testid="phoneNumber"
              id="phoneNumber"
              name="phoneNumber"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="+1234"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and compares with same identity 1`] = `
<div
  className="Identity"
>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="firstNameGroup"
          >
            <label
              className="form-label"
              htmlFor="firstName"
            >
              First Name
            </label>
            <input
              className="form-control"
              data-testid="firstName"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="John"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="lastNameGroup"
          >
            <label
              className="form-label"
              htmlFor="lastName"
            >
              Last Name
            </label>
            <input
              className="form-control"
              data-testid="lastName"
              id="lastName"
              name="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Doe"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="emailGroup"
          >
            <label
              className="form-label"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className="form-control"
              data-testid="email"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="john.doe@logion.network"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="phoneNumberGroup"
          >
            <label
              className="form-label"
              htmlFor="phoneNumber"
            >
              Phone Number
            </label>
            <input
              className="form-control"
              data-testid="phoneNumber"
              id="phoneNumber"
              name="phoneNumber"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="+1234"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without comparison 1`] = `
<div
  className="Identity"
>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="firstNameGroup"
          >
            <label
              className="form-label"
              htmlFor="firstName"
            >
              First Name
            </label>
            <input
              className="form-control"
              data-testid="firstName"
              id="firstName"
              name="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="John"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="lastNameGroup"
          >
            <label
              className="form-label"
              htmlFor="lastName"
            >
              Last Name
            </label>
            <input
              className="form-control"
              data-testid="lastName"
              id="lastName"
              name="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Doe"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="emailGroup"
          >
            <label
              className="form-label"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className="form-control"
              data-testid="email"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="john.doe@logion.network"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="IdentityCol col-md-6"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="phoneNumberGroup"
          >
            <label
              className="form-label"
              htmlFor="phoneNumber"
            >
              Phone Number
            </label>
            <input
              className="form-control"
              data-testid="phoneNumber"
              id="phoneNumber"
              name="phoneNumber"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="+1234"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
